# pibo_mos2

./: .gitignore  MANIFEST_AND_VERIFICATION.md  README.md  main.py  pyproject.toml  run.py
Figure_data/: Figure3ab.xlsx  Figure3c.xlsx  Figure4a.xlsx  Figure4b.xlsx  Figure4c.xlsx  Figure4d.xlsx  Figure4e.xlsx  Figure4f.xlsx  Figure5a.xlsx  Figure6.xlsx  Figure7.xlsx  Figure8.xlsx
configs/: acq_grid_default.json  default_mosh.json  ezff_variable_bounds.txt  run_default.yaml
data/: gp_surrogate.pkl  optimizer_replicates.csv  parameter_bounds.csv
lammps_templates/: ffield.reax.MoSH.NoteS1.template  ffield.reax.MoSH.template  in.reaxff.tmpl
pibo_calculation/: README.md  _lmp_path.py  optimizer_error.py  optimizer_io.py  recalib_combined_all.py  recalib_staged_bo.py
pibo_calculation/data/: MoS2_physical_validation.csv  data.mos2_2H_monolayer_10x10_ryanDFT.lammpsdata  ffield.reax.MoSH.pibo_biaxial_v9.reax  optimizer_variable_bounds.txt
pibo_reaxff/: __init__.py  benchmark.py  best_export.py  ezff_error.py  ezff_io.py  ezff_lammps.py  ezff_vasp.py  gp_surrogate.py  lammps_runner.py  local_env.py  loss.py  memory.py  parameters.py  parametric_study.py  physics_constraints.py  posterior_report.py  staged_bo.py  vasp_reader.py  visualization.py  visualization_pibo.py
pibo_reaxff/core/: __init__.py  bayesian_uncertainty.py  blocked_pibo.py  improved_gp.py  plot_dft_comparison_enhanced.py  plotting_utils.py  reaxff_parameters_complete.py  staged_pibo.py
pibo_reaxff/data/: __init__.py  preprocessor.py  reader.py
pibo_reaxff/optimizers/: __init__.py  base.py  cmaes.py  indeedopt.py  (+3 more)
scripts/: build_parameter_bounds.py  build_phase01_inputs.py  phase01_validate.py  phase02_sloppy.py  phase03_profile.py  phase04_hmc.py  phase05_compare.py  phase06_figure9.py  phase07_table2.py  phase08_rebuttal.py  pibo_biaxial_recalib_expanded.py  pibo_biaxial_recalib_v10.py  pibo_biaxial_recalib_v11.py  pibo_biaxial_recalib_v12.py  pibo_biaxial_recalib_v13.py  pibo_biaxial_recalib_v3.py  pibo_biaxial_recalib_v4.py  pibo_biaxial_recalib_v5.py  pibo_biaxial_recalib_v6.py  pibo_biaxial_recalib_v7.py  pibo_biaxial_recalib_v8.py  pibo_biaxial_recalib_v9.py  pibo_biaxial_recalibrate.py  recalib_combined_all.py  recalib_staged_bo.py  retrain_gp_posterior_in_eV.py
src/: __init__.py  ffield_parse.py  gp_utils.py  hmc.py  plotting.py  sloppy.py  uncertainty.py
(+151 files in other folders)
